--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Views/Shared/Widgets/Sample/ToDo.cshtml
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Views/Shared/Widgets/Sample/ToDo.cshtml
@@ -10,14 +10,10 @@
     var tasks = $safeprojectname$.Services.ToDo.Get();
     Html.RegisterControlPresenter("$clientnamespace$.todo", Model, new { data = tasks } ); //can easily pass data from server to client-presenter
 }
-
 <div id="@Model.GetId("Widget")">
     @{Html.RenderPartial("WidgetHeader", Model);}
-
     @{Html.RenderPartial("WidgetSectionHeader", Model, new ViewDataDictionary(new { SectionHeader = Model.GetText("WidgetTitle.Text", "To Do List") }));}
-
     <p>@Html.Raw(Model.GetText("Instructions.Text", "Keep track of your To Do list."))</p>@*Notice how we handle localization simply call GetText with a token and a default value and it will be added to your localization table where other translations can be added*@
-
     <div class="row">
         <div class="btn-toolbar col-md-12">
             <div class="btn-group">
@@ -25,7 +21,7 @@
             </div>
         </div>
     </div>
-    <br/>
+    <br />
     <div class="row">
         <div class="col-md-12">
             <table class="table table-striped table-bordered table-condensed" id="@Model.GetId("ItemTable")">
@@ -39,20 +35,20 @@
                 <tbody id="@Model.GetId("ItemList")"></tbody>
             </table>
             <script id="@Model.GetId("ItemListTemplate")" type="text/html">
+                @*This is our jsRender template*@
                 <tr>
                     <td>
                         <div class="btn-group">
-                        @Html.Bootstrap().Button().DataAttribute("id", "{{:Id}}").DataAttribute("action", "edit").Icon("glyphicon glyphicon-pencil").ButtonSize(BootstrapUnits.ButtonSize.ExtraSmall)
-                        @Html.Bootstrap().Button().DataAttribute("id", "{{:Id}}").DataAttribute("action", "delete").Icon("glyphicon glyphicon-trash").ButtonSize(BootstrapUnits.ButtonSize.ExtraSmall)
+                            @Html.Bootstrap().Button().DataAttribute("id", "{{:Id}}").DataAttribute("action", "edit").Icon("glyphicon glyphicon-pencil").ButtonSize(BootstrapUnits.ButtonSize.ExtraSmall)
+                            @Html.Bootstrap().Button().DataAttribute("id", "{{:Id}}").DataAttribute("action", "delete").Icon("glyphicon glyphicon-trash").ButtonSize(BootstrapUnits.ButtonSize.ExtraSmall)
                         </div>
                     </td>
                     <td>{{:Name}}</td>
-                    <td>{{:~formatDateTime(CompletedDate)}}</td>
+                    <td>{{:~formatDateTime(CompletedDate, null, '@Account.GetUserTimeZoneName()')}}</td>
                 </tr>
             </script>
         </div>
     </div>
-
     <div id="@Model.GetId("Dialog")" data-target="#@Model.GetId("Dialog")" class="modal fade">
         <div class="modal-dialog" style="width: 700px;">
             <div class="modal-content">
@@ -62,11 +58,10 @@
                 </div>
                 <div class="modal-body">
                     @{Html.RenderPartial("WidgetHeader", Model);}
-
                     <div class="form-horizontal">
                         @Html.Bootstrap().FormGroup(Html.Bootstrap().Label("Name.Text", "Name").GridSize(BootstrapUnits.GridSize.MediumDevice3), Html.Bootstrap().TextBox().DataColumn("Name").Required(), BootstrapUnits.GridSize.MediumDevice9)
                         @Html.Bootstrap().FormGroup(Html.Bootstrap().Label("Description.Text", "Text").GridSize(BootstrapUnits.GridSize.MediumDevice3), Html.Bootstrap().TextArea().Rows(5).DataColumn("Description"), BootstrapUnits.GridSize.MediumDevice9)
-                        @Html.Bootstrap().FormGroup(Html.Bootstrap().Label("CompletedDate.Text", "Completed Date").GridSize(BootstrapUnits.GridSize.MediumDevice3), Html.Bootstrap().DateTimePicker().DataColumn("CompletedDate"), BootstrapUnits.GridSize.MediumDevice9)
+                        @Html.Bootstrap().FormGroup(Html.Bootstrap().Label("CompletedDate.Text", "Completed Date").GridSize(BootstrapUnits.GridSize.MediumDevice3), Html.Bootstrap().DateTimePicker().DataColumn("CompletedDate").UserTimeZone(), BootstrapUnits.GridSize.MediumDevice9)
                     </div>
                 </div>
                 <div class="modal-footer">
