ENH: Added new using statement for bootstrap to view pages.  Added stand alone view page template.

--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Views/Shared/Widgets/Sample/ToDo.cshtml
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Views/Shared/Widgets/Sample/ToDo.cshtml
@@ -3,6 +3,7 @@
 @using Models = Videre.Core.Models;
 @using System.Web.Mvc.Html;
 @using Videre.Core.Services;
+@using Bootstrap = Videre.Core.Extensions.Bootstrap;
 @model Models.Widget
 
 @{
